--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
-pom.properties
+./pom.properties
 # Compiled class file
 *.class
 
