--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,9 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
-./pom.properties
+
+ApplicationHome/application-web-main/target/m2e-wtp/web-resources/META-INF/maven/com.yawei/application-web-main/pom.properties
+ApplicationHome/application-core/target/classes/META-INF/maven/com.yawei/application-core/pom.properties
 # Compiled class file
 *.class
 
