--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar 
 ApplicationHome/application-core/target/classes/META-INF/maven/com.yawei/application-core/pom.properties
 ApplicationHome/application-web-main/target/m2e-wtp/web-resources/META-INF/maven/com.yawei/application-web-main/pom.properties
+/.idea
+*.iml
 # Compiled class file
 *.class
 
