--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar 
 /target
 /.idea
+ApplicationHome/out
 *.iml
 # Compiled class file
 *.class
